--- a/style.css
+++ b/style.css
@@ -154,9 +154,10 @@ h1 {
     cursor: pointer;
 }
 
-.paragrafosprojeto {
+.paragrafoprojetos {
     color: rgba(226, 232, 240, 0.8);
     line-height: 1.25rem;
+    text-align: center;
 }
 
 .projetosimagem {
